fixed camera adjustment